--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
 <p>WAD a transactional ledger that reports the interest earned on immutable transactional ledgers to report the proper reporting of the ledger that has been immuatable in the transactions based on use of interest with interest in the transactions on the immutable ledger reporting is based on interest in the ledger</p>
 
-<p>DISCLAIMER: WAD is not a currency, security, note, indenture, bond, stock, or store of value of any kind.  At the same time, yes we created tokens.</p>
-
 <p>WAD uses Byzantine Fault Tolerance Proof of Stake (BFTPoS) to provide immutable record storage and decentralized security.  It is infinitely scalable, utilizing on-demand parallel processing sidechains, and supports EVM smart contracts, Zk-Snark and Zk-Stark private transactions, and is compatible with all ERC-20 and ERC-755 token standards.</p>
+
+<footer>DISCLAIMER: WAD is not a currency, security, note, indenture, bond, stock, or store of value of any kind.  At the same time, yes we created tokens.</footer>
 
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
