--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 
 <footer>DISCLAIMER: WAD is not a currency, security, note, indenture, bond, stock, or store of value of any kind.  At the same time, yes we created tokens.</footer>
 
+<img src="img/AlexNickWufDiscussingCrypto.jpg" alt="The Boiz Discussing Crypto In PVille">
+
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
