-add title to pic

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
 <footer>DISCLAIMER: WAD is not a currency, security, note, indenture, bond, stock, or store of value of any kind.  At the same time, yes we created tokens.</footer>
 
+<p>The Boyz discussing crypto in PVille, after a Mozzarella bar meeting </p>
 <img src="img/AlexNickWufDiscussingCrypto.jpg" alt="The Boiz Discussing Crypto In PVille">
 
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
