-add more content

--- a/theboyz.html
+++ b/theboyz.html
@@ -23,33 +23,10 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-<h1>WAD</h1>
-
-<h2>Mission Statement: We are reinventing the wheel by going back to the wheel and using it, like it has never been used before, but also, exactly the same way is has been used for centuries.</h2>
-
-<p>WAD is about taking your community and integrating it into an e-commerce ecosystem that provides sustainability and inspiration.</p>
-
-<p>WAD a transactional ledger that reports the interest earned on immutable transactional ledgers to report the proper reporting of the ledger that has been immuatable in the transactions based on use of interest with interest in the transactions on the immutable ledger reporting is based on interest in the ledger</p>
-
-<p>WAD uses Byzantine Fault Tolerance Proof of Stake (BFTPoS) to provide immutable record storage and decentralized security.  It is infinitely scalable, utilizing on-demand parallel processing sidechains, and supports EVM smart contracts, Zk-Snark and Zk-Stark private transactions, and is compatible with all ERC-20 and ERC-755 token standards.</p>
-
-<footer>DISCLAIMER: WAD is not a currency, security, note, indenture, bond, stock, or store of value of any kind.  At the same time, yes we created tokens.</footer>
-
+<h1>The Boyz</h1>
 
 <p><b>The Boyz discussing crypto in PVille, after a Mozzarella bar meeting</b></p>
 <img src="img/AlexNickWufDiscussingCrypto.jpg" alt="The Boiz Discussing Crypto In PVille">
-
-
-<p><b>Of course, it isn't all hard work and no fun around here.....</b></p>
-<img src="img/EricBusinessFun.jpg" alt="EricPool">
-
-
-<p><b>Even Good Boyz Love Crypto</b></p>
-<img src="img/Murphtard.jpg" alt="Murphtard">
-
-
-<p><b>Nick At 25 Years Old</b></p>
-<img src="img/BabyNick.jpg" alt="BabyNick">
 
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
