--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
 <p><b>Nick At 25 Years Old</b></p>
 <img src="img/BabyNick.jpg" alt="BabyNick">
 
+
+<p><b>Jordawg</b></p>
+<img src="img/Jordawg.jpg" alt="Jordawg">
+
+
+<p><b>Need that facetime</b></p>
+<img src="img/RyanAndDapperEric.jpg" alt="RyanAndDapperEric">
+
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
