-let's not get fired

--- a/index.html
+++ b/index.html
@@ -52,12 +52,20 @@
 <img src="img/BabyNick.jpg" alt="BabyNick">
 
 
-<p><b>Jordawg</b></p>
+<p><b>Xander Sarantiev with his pup Kufar</b></p>
 <img src="img/Jordawg.jpg" alt="Jordawg">
+
+
+<p><b>Steff having a smirk</b></p>
+<img src="img/PoorStephe.jpg" alt="SteffStache">
 
 
 <p><b>Need that facetime</b></p>
 <img src="img/RyanAndDapperEric.jpg" alt="RyanAndDapperEric">
+
+
+<p><b>Krys Bertilinov and Ahlex Katesov</b></p>
+<img src="img/AhlexAndKris.jpg" alt="AhlexAndKris">
 
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
