--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
 
 
 <p><b>The Boyz discussing crypto in PVille, after a Mozzarella bar meeting</b></p>
-<img src="img/AlexNickWufDiscussingCrypto.jpg" alt="The Boiz Discussing Crypto In PVille">
+<img src="img/AlexNickWufDiscussingCrypto.jpg" alt="PVille">
 
+<p><b>Mattias Wufunsauce having some mozzarella fries</b></p>
+<img src="img/Wuffries.jpg" alt="Wuffries">
 
 <p><b>Of course, it isn't all hard work and no fun around here.....</b></p>
 <img src="img/EricBusinessFun.jpg" alt="EricPool">
