--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <img src="img/AlexNickWufDiscussingCrypto.jpg" alt="PVille">
 
 <p><b>Mattias Wufunsauce having some mozzarella fries</b></p>
-<img src="img/Wuffries.jpg" alt="Wuffries">
+<img src="img/WufFries.jpg" alt="Wuffries">
 
 <p><b>Of course, it isn't all hard work and no fun around here.....</b></p>
 <img src="img/EricBusinessFun.jpg" alt="EricPool">
