--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-<h1>Bella is a good girl!</h1>
+<h1>Not the site you are looking for.</h1>
 
 
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
